# parallel_quick_sort

./: CMakeLists.txt  main.cpp  par.h  seq.h  test.h
